--- a/README
+++ b/README
@@ -12,8 +12,8 @@ You can get the library here:
   - Production version: https://github.com/kmalakoff/knockback/raw/master/knockback.min.js
 
 You also will need to use my slightly modified copies of Knockout until the changes are merged into the main branch:
-  - Development version: https://github.com/kmalakoff/knockback/raw/master/knockout-1.2.1-kmalakoff.js
-  - Production version: https://github.com/kmalakoff/knockback/raw/master/knockout-1.2.1.debug-kmalakoff.min.js
+  - Development version: https://github.com/kmalakoff/knockback/raw/master/knockout-1.2.1.debug-kmalakoff.js
+  - Production version: https://github.com/kmalakoff/knockback/raw/master/knockout-1.2.1-kmalakoff.js
 
 If anyone wants to port this to Knockout 1.3 beta, please do and let me know! You can find my changes here: https://github.com/kmalakoff/knockout/tree/forceRefresh
 
