--- a/README
+++ b/README
@@ -40,10 +40,10 @@ An Example:
 
     class ContactViewModel
       constructor: (model) ->
-        new kb.ModelAttributeObservables(model, {
-          name:     {keypath:'name'}
-          email:    {keypath:'email', write: true, default: 'your.name@yourplace.com'}
-          date:     {keypath:'date', write: true, localizer: (value) => return new LongDateLocalizer(value)}
+        kb.observables(model, {
+          name:     {key:'name'}
+          email:    {key:'email', write: true, default: 'your.name@yourplace.com'}
+          date:     {key:'date', write: true, localizer: (value) => return new LongDateLocalizer(value)}
         }, this)
 
   The HTML:
@@ -62,49 +62,60 @@ And now when you type in the input boxes, the values are properly transferred to
 Of course, this is just a simple example, but hopefully you get the picture. For a more advanced version, look at test/interactive/test.html or http://jsfiddle.net/kmalakoff/QSkpv/.
 
 ****************
+A quick explanation of conventions:
+
+  1) Knockback and kb are aliased so you can use kb.observable or Knockback.observable.
+
+  2) The library is written with the following naming conventions: i) Classes are CamelCase, ii) functions are sortaCamelCased, iii) properties are written_with_underscores, and constants are BIG_AND_NOTICABLE.
+
+  3) What 2) means is that kb.observable() is actually a factory function and kb.Observable is the class it creates and from which you derive if you want to override behavior. In other words:
+
+    # factory function
+    Knockback.observable = (model, bind_info, view_model) -> return new Knockback.Observable(value, bind_info, view_model)
+
 The library includes the following classes:
 
-  1) Knockback.ModelAttributeObservables and Knockback.ModelAttributeObservable - these are the foundations for watching model attributes for one and two-way changes. The pluralized form provides a short-hand for multiple attributes like in the above example.
+  1) Knockback.observables and Knockback.observable - these are the foundations for watching model attributes for one and two-way changes. The pluralized form provides a short-hand for multiple attributes like in the above example.
 
-  Note 1: you can watch a non-BackboneModel as long as it: a) mixes in Backbone.Events and triggers 'change' and/or "change:#{attribute_name}" events and b) implements "get: (attribute_name) -> return something". This simplified Backbone.Model API is the same interface as is needed for your implementation of Knockback.locale_manager:
+  Note 1: you can watch a non-BackboneModel as long as it: a) mixes in Backbone.Events and triggers 'change' and/or "change:#{attribute_name}" events and b) implements "get: (attribute_name) -> return something". This simplified Backbone.Model API is the same interface as is needed for your implementation of kb.locale_manager:
 
-    new kb.ModelAttributeObservables(Knockback.locale_manager, {
-      label_title_new:    { keypath: 'label_title_new' },
-      label_button_new:   { keypath: 'label_button_new' },
-      label_name:         { keypath: 'label_name' },
-      label_email:        { keypath: 'label_email' },
-      label_date:         { keypath: 'label_date' }
+    kb.observables(kb.locale_manager, {
+      label_title_new:    { key: 'label_title_new' },
+      label_button_new:   { key: 'label_button_new' },
+      label_name:         { key: 'label_name' },
+      label_email:        { key: 'label_email' },
+      label_date:         { key: 'label_date' }
     }, view_model)
 
   Note 2: you can provide custom read and write methods to provide custom formatting to the attributes just like in Knockout.
 
-    new kb.ModelAttributeObservable(model, {
-      keypath:'number'
+    kb.observable(model, {
+      key:'number'
       read: -> return "#: #{model.get('number')}"
       write: (value) -> model.set({number: value.substring(3)})
     }, this)
 
-  Note 3: you can provide a localizer (see Knockback.LocalizedObservable) to both provide read and write localization for an attribute.
+  Note 3: you can provide a localizer (see the Knockback.LocalizedObservable class) to both provide read and write localization for an attribute.
 
-    new kb.ModelAttributeObservables(model, {
-      date:     {keypath:'date', write: true, localizer: (value) => return new LongDateLocalizer(value)}
+    kb.observables(model, {
+      date:     {key:'date', write: true, localizer: (value) => return new LongDateLocalizer(value)}
     }, this)
 
   Note 4: you can also watch a Backbone.ModelRef instead of a Backbone.Model. What is a Backbone.ModelRef do you ask? It is the combination of a collection and a model id that tells you when it is loaded and unloaded (https://github.com/kmalakoff/backbone-modelref). That way, you can start rendering views on a page while the models are loading. If the model unloads, the default behavior is to retain the last value, but you can force a refresh on unload using attribute_observable.forceRefresh():
 
-    - If the model reference gets unloaded and you want to restore the default values, you can call forceRefresh on either Knockback.ModelAttributeObservables or Knockback.ModelAttributeObservable, and they will restore the defaults. The assumption is that normally, keeping the old values is a desired behavior.
+    - If the model reference gets unloaded and you want to restore the default values, you can call forceRefresh on either Knockback.observables or Knockback.observable, and they will restore the defaults. The assumption is that normally, keeping the old values is a desired behavior.
 
 
-  2) Knockback.CollectionSync - this basically takes a ko.observableArray and makes sure it stays in sync and sorted with a collection. You need to at minimum provide a "viewModelCreate: (model) -> return new myViewModel(model)" function which can return an instance of a class or can be a plain old Javascript object. The important thing is that the view model you provide should be unique per instance of your model or else the "behavior is not guaranteed".
+  2) Knockback.CollectionSync - this takes a ko.observableArray and makes sure it stays in sync and sorted with a collection. You need to at minimum provide a "viewModelCreate: (model) -> return new myViewModel(model)" function which can return an instance of a class or can be a plain old Javascript object. The important thing is that the view model you provide should be unique per instance of your model or else the "behavior is not guaranteed".
 
-    new Knockback.CollectionSync(collection, view_models_array, {
+    kb.collectionSync(collection, view_models_array, {
       viewModelCreate:    (model) -> return new ContactViewModel(model)
       viewModelDestroy:   (view_model) -> view_model.destroy()
     })
 
   Note 1: you can either have the collection sort for you (eg. using a Backbone.Collection "comparator") or you can provide your own sorting methods that are decoupled from the collection like:
 
-    collection_sync = new Knockback.CollectionSync(collection, view_models_array, {
+    collection_sync = kb.collectionSync(collection, view_models_array, {
       sort_attribute:     'name' # optimization to only refresh when this attribute changes
       sortedIndex:        (models, model) -> _.sortedIndex(models, model, (test) -> test.get('name'))
     })
@@ -120,28 +131,24 @@ The library includes the following classes:
     c) elementByModel: (model) ->
     d) eachViewModel: (iterator) ->
 
-  3) Knockback.LocalizedObservable - this is the most tricky to implement (look in the examples_lib/localized_observables.coffee file for examples). Basically, a value is stored inside this class and is manually synced by a Knockback.ModelAttributeObservable whenever the model attribute changes since it can point to a new value instance for the same attribute. Here's an example of a read only one:
+  3) Knockback.localizedObservable - this is the most tricky to implement (look in the examples_lib/localized_observables.coffee file for examples). Basically, a value is stored inside this class and is manually synced by a Knockback.observable whenever the model attribute changes since it can point to a new value instance for the same attribute. Here's an example of a read only one:
 
   class LocalizedStringLocalizer extends kb.LocalizedObservable
     constructor: (value, options, view_model) ->
-      super; return kb.observable(this)
+      super; return kb.wrappedObservable(this)
     read: (value) ->
-      return if (value.string_id) then Knockback.locale_manager.get(value.string_id) else ''
+      return if (value.string_id) then kb.locale_manager.get(value.string_id) else ''
 
-    Note 1: this looks like it returns an instance but it actually returns a ko.dependentObservable from super (use kb.observable to accesss it). Don't get caught out!
+    Note 1: this looks like it returns an instance but it actually returns a ko.dependentObservable from super (use kb.observable to access it). Don't get caught out!
 
-    Note 2: if you use these localization helpers, you need to implement a Knockback.locale_manager.  As mentioned in 1) Note 1....you can watch a non-BackboneModel as long as it: a) mixes in Backbone.Events and triggers 'change' events and b) implements "get: (attribute_name) -> " and which is a minimal Backbone.Model interface...this is just what a Backbone.locale_manager is. Pretty clever, eh?
+    Note 2: if you use these localization helpers, you need to implement a kb.locale_manager.  As mentioned in 1) Note 1....you can watch a non-BackboneModel as long as it: a) mixes in Backbone.Events and triggers 'change' events and b) implements "get: (attribute_name) -> " and which is a minimal Backbone.Model interface...this is just what a Backbone.locale_manager is. Pretty clever, eh?
 
 
 Final notes:
 
-  a) Everything uses a new/destroy lifecycle. You need to destroy everything you create to ensure memory is cleaned up correctly. Some of my examples leave that out rigorous cleanup for understandability, but please don't forget!
+  a) Everything uses a new/destroy lifecycle. You need to destroy everything you create to ensure memory is cleaned up correctly. Some of my examples leave that out rigorous cleanup for understandability, but please don't forget! I'm hoping to change this: https://github.com/kmalakoff/knockback/issues/2
 
-  b) Naming conventions. The library is based on the following: i) Classes are CamelCase, ii) functions are sortaCamelCased, iii) properties are written_with_underscores, and constants are BIG_AND_NOTICABLE.
-
-  c) The Knockback and kb namespaces are aliased so you can be brief or not...your choice. In other words: Knockback.CollectionSync and kb.CollectionSync point to the same constructor.
-
-  d) Knockback.ModelAttributeObservable and Knockback.LocalizedObservable actually return a ko.dependentObservable with a bound destroy method on it. It you want to subclass your own, look at the source files (like Knockback.ModelAttributeObservable) because a little bit of a Coffeescript dance is required to return the right thing from your constructor!
+  b) Knockback.observable, Knockback.observables and Knockback.localizedObservable actually return a ko.dependentObservable with a bound destroy method on it. It you want to subclass your own, look at the source files (like Knockback.observable) because a little bit of a Coffeescript dance is required to return the right thing from your constructor! (that's what the kb.wrappedObservable() is for)
 
 
-In addition to the examples in the test folder (https://github.com/kmalakoff/knockback/blob/master/test), you can look at the examples_lib folder for a sample Knockback.locale_manager, a localized string, and some examples of localized observables.
+In addition to the examples in the test folder (https://github.com/kmalakoff/knockback/blob/master/test), you can look at the examples_lib folder for a sample kb.locale_manager, a localized string, and some examples of localized observables.
